fix: setup child body elements alignment

--- a/src/assets/styles/_tokens.scss
+++ b/src/assets/styles/_tokens.scss
@@ -1,3 +1,6 @@
+$sm-device: 768px;
+$md-device: 1440px;
+
 $text-default-font-family: "Space Mono", monospace;
 $text-default-font-weight: 400;
 $text-default-font-size: 1.5rem;
