--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,3 +1,19 @@
+@use "./tokens" as *;
+
 @use "./resets";
 
 @import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap");
+
+body {
+  margin: auto;
+  padding: 3.1rem 2.4rem;
+
+  @media screen and (min-width: $sm-device) {
+    padding: 14rem 9.7rem;
+  }
+
+  @media screen and (min-width: $md-device) {
+    max-width: 73rem;
+    padding: 14.4rem 0;
+  }
+}
